--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.section{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.left-section{
+  border: 2px solid black;
+    /* position: absolute; */
+    width: 464px;
+    /* height: 100%; */
+    left: 0px;
+    top: 0px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100vh;
+    align-items: center;
+}
+.logo-text{
+  position: absolute;
+    width: 246px;
+    height: 88px;
+    /* left: 171px;
+    top: 280px; */
+    
+    font-style: normal;
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 88px;
+    color: white;
+}
+.right-section{
+  /* position: absolute;
+width: 852px; */
+height: 100%;
+width: 35%;
+left: 588px;
+top: 0px;
+display: flex;
+justify-content: right;
+position: absolute;
+align-items: center;
+}
+.sign-in{
+  /* position: absolute; */
+width: 131px;
+height: 44px;
+/* left: 300px;
+top: 75px; */
+
+
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 44px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sign-in-line{
+  
+width: 161px;
+height: 19px;
+
+padding-top: 10px;
+
+font-family: math;
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+}
+
+.google-btn{
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
